# django_course_movie_site

./: .gitignore  Makefile  pyproject.toml
django_movie/contact/: forms.py  models.py
django_movie/contact/migrations/: 0001_initial.py
django_movie/django_movie/: settings.py  urls.py
django_movie/locale/en/LC_MESSAGES/: django.po
django_movie/movies/: admin.py  forms.py  models.py  urls.py  views.py
django_movie/movies/migrations/: 0001_initial.py  0002_auto_20210330_2059.py  0003_auto_20210404_1524.py  0004_auto_20210404_1818.py
django_movie/movies/templates/: base.html
django_movie/movies/templates/include/: footer.html  header.html  sidebar.html
django_movie/movies/templates/movies/: base.html  movie_detail.html  movie_list.html  movies.html
django_movie/movies/templatetags/: movie_tag.py
django_movie/static/css/: bootstrap.css  style.css
django_movie/templates/: base.html
django_movie/templates/contact/tags/: form.html
django_movie/templates/include/: footer.html  header.html  sidebar.html
django_movie/templates/movies/: actor.html  base.html  movie_detail.html  movie_list.html
django_movie/templates/pages/: about.html
