[tool.poetry]
name = "movie"
version = "0.1.0"
description = ""
authors = ["Sergey Kornienko <skornienko29@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
Pillow = "^8.1.2"
django-ckeditor = "^6.0.0"
django-environ = "^0.4.5"
django-recaptcha3 = "^0.4.0"
django-modeltranslation = "^0.16.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
